@@ -1,4 +1,5 @@
 31 Dec 2017
+update: CACHE class
 update: database updates
 update: install scripts
 fix: invite signup
